--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -1133,6 +1133,9 @@
                                                 <rect key="frame" x="0.0" y="87" width="114.5" height="31"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="gray" title="EDIT PROFILE"/>
+                                                <connections>
+                                                    <action selector="modifyProfile:" destination="34j-kk-D1d" eventType="touchUpInside" id="iWH-Vq-FLe"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -1322,12 +1325,134 @@
                         <outlet property="nom" destination="BmF-34-qLd" id="Vyj-d7-wVk"/>
                         <outlet property="profileImage" destination="DaU-Qe-An9" id="FqU-VF-sqG"/>
                         <segue destination="6Ep-DF-EGL" kind="presentation" identifier="logOutSegue" modalPresentationStyle="fullScreen" id="Kza-w1-WLq"/>
+                        <segue destination="DYS-BR-gcz" kind="presentation" identifier="profileModifySegue" modalPresentationStyle="fullScreen" id="vUP-eC-iTZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nML-eW-1Qb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="2PA-KA-JCf" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1209" y="1359"/>
+        </scene>
+        <!--Modifier Profile View Controller-->
+        <scene sceneID="AAe-pE-wRH">
+            <objects>
+                <viewController id="DYS-BR-gcz" customClass="ModifierProfileViewController" customModule="showapp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zXx-8q-dHC">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="piw-o2-5Ow">
+                                <rect key="frame" x="82" y="104" width="250" height="250"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="2rG-c0-swg"/>
+                                    <constraint firstAttribute="height" constant="250" id="9IO-9E-LJK"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xBK-ud-fJX">
+                                <rect key="frame" x="60" y="454" width="80" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="6fj-eS-TPn"/>
+                                    <constraint firstAttribute="height" constant="50" id="GW3-nf-Rg0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oxs-Hu-WXL">
+                                <rect key="frame" x="60" y="564" width="80" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="Fjx-Va-FJh"/>
+                                    <constraint firstAttribute="height" constant="50" id="w7O-W0-zkz"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ceu-Ww-gnT">
+                                <rect key="frame" x="150" y="464" width="200" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="XsM-Lk-rR1"/>
+                                    <constraint firstAttribute="height" constant="30" id="wI5-KW-OLc"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pOH-5H-5Ic">
+                                <rect key="frame" x="150" y="574" width="200" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="N6F-8E-ns1"/>
+                                    <constraint firstAttribute="height" constant="30" id="y8D-iA-ih2"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gHy-Pb-hYh">
+                                <rect key="frame" x="157" y="771" width="100" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="aLx-h3-Ngp"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Confirm"/>
+                                <connections>
+                                    <action selector="ConfirmButton:" destination="DYS-BR-gcz" eventType="touchUpInside" id="czh-l5-Ovc"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nlr-VV-v7a">
+                                <rect key="frame" x="0.0" y="44" width="50" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="giA-gM-ktF"/>
+                                    <constraint firstAttribute="width" constant="50" id="rKY-Lx-ll5"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="arrow.left" catalog="system"/>
+                                <connections>
+                                    <action selector="back:" destination="DYS-BR-gcz" eventType="touchUpInside" id="hwk-uv-vkz"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5x2-zR-dv6">
+                                <rect key="frame" x="82" y="104" width="250" height="250"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="0DV-5O-PDf"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain"/>
+                                <connections>
+                                    <action selector="addImagePress:" destination="DYS-BR-gcz" eventType="touchUpInside" id="2Re-4u-oTk"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="swz-AZ-3Sc"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="oxs-Hu-WXL" firstAttribute="top" secondItem="xBK-ud-fJX" secondAttribute="bottom" constant="60" id="8fQ-iw-E9d"/>
+                            <constraint firstItem="piw-o2-5Ow" firstAttribute="centerX" secondItem="swz-AZ-3Sc" secondAttribute="centerX" id="CND-jL-72x"/>
+                            <constraint firstItem="xBK-ud-fJX" firstAttribute="top" secondItem="piw-o2-5Ow" secondAttribute="bottom" constant="100" id="CWB-oe-7rH"/>
+                            <constraint firstItem="Nlr-VV-v7a" firstAttribute="leading" secondItem="swz-AZ-3Sc" secondAttribute="leading" id="CxM-Tt-Sjy"/>
+                            <constraint firstItem="5x2-zR-dv6" firstAttribute="top" secondItem="piw-o2-5Ow" secondAttribute="top" id="Fm4-Nv-Aev"/>
+                            <constraint firstItem="ceu-Ww-gnT" firstAttribute="top" secondItem="piw-o2-5Ow" secondAttribute="bottom" constant="110" id="G49-8q-apM"/>
+                            <constraint firstItem="gHy-Pb-hYh" firstAttribute="centerX" secondItem="swz-AZ-3Sc" secondAttribute="centerX" id="MOk-FU-NVr"/>
+                            <constraint firstItem="pOH-5H-5Ic" firstAttribute="leading" secondItem="oxs-Hu-WXL" secondAttribute="trailing" constant="10" id="VPb-T6-gga"/>
+                            <constraint firstItem="piw-o2-5Ow" firstAttribute="top" secondItem="swz-AZ-3Sc" secondAttribute="top" constant="60" id="dgq-0D-rr8"/>
+                            <constraint firstItem="xBK-ud-fJX" firstAttribute="leading" secondItem="swz-AZ-3Sc" secondAttribute="leading" constant="60" id="fyM-Sl-SSX"/>
+                            <constraint firstItem="oxs-Hu-WXL" firstAttribute="leading" secondItem="swz-AZ-3Sc" secondAttribute="leading" constant="60" id="ljV-ZP-NZY"/>
+                            <constraint firstItem="5x2-zR-dv6" firstAttribute="leading" secondItem="piw-o2-5Ow" secondAttribute="leading" id="n7v-Y0-ECd"/>
+                            <constraint firstItem="5x2-zR-dv6" firstAttribute="bottom" secondItem="piw-o2-5Ow" secondAttribute="bottom" id="pED-Yn-oOR"/>
+                            <constraint firstItem="Nlr-VV-v7a" firstAttribute="top" secondItem="swz-AZ-3Sc" secondAttribute="top" id="raz-aC-ctb"/>
+                            <constraint firstItem="swz-AZ-3Sc" firstAttribute="bottom" secondItem="gHy-Pb-hYh" secondAttribute="bottom" constant="60" id="tZg-6o-Bnt"/>
+                            <constraint firstItem="5x2-zR-dv6" firstAttribute="centerX" secondItem="swz-AZ-3Sc" secondAttribute="centerX" id="uJv-Zu-T7r"/>
+                            <constraint firstItem="pOH-5H-5Ic" firstAttribute="top" secondItem="ceu-Ww-gnT" secondAttribute="bottom" constant="80" id="vVR-fp-dHW"/>
+                            <constraint firstItem="ceu-Ww-gnT" firstAttribute="leading" secondItem="xBK-ud-fJX" secondAttribute="trailing" constant="10" id="wqt-3B-uNd"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="email" destination="pOH-5H-5Ic" id="45I-vf-7tE"/>
+                        <outlet property="name" destination="ceu-Ww-gnT" id="QHw-Eb-FED"/>
+                        <outlet property="profilePicture" destination="piw-o2-5Ow" id="w8R-kg-wju"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pVp-vu-HPT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2215.9420289855075" y="1358.7053571428571"/>
         </scene>
         <!--Categorie Model View Controller-->
         <scene sceneID="JTE-DP-awV">
@@ -1652,7 +1777,7 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="BGX-De-VZI"/>
-        <segue reference="zlm-2g-rDi"/>
+        <segue reference="Kza-w1-WLq"/>
         <segue reference="FdU-sM-cdB"/>
         <segue reference="iXE-qo-Rle"/>
         <segue reference="H4s-oc-3Md"/>
