--- a/View/Company/Company.storyboard
+++ b/View/Company/Company.storyboard
@@ -25,6 +25,14 @@
             </objects>
             <point key="canvasLocation" x="-1183" y="-18"/>
         </scene>
+        <!--Connexion-->
+        <scene sceneID="WdZ-01-eRg">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Main" referencedIdentifier="Connexion" id="tbQ-Zs-kCL" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9tM-fe-gMl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2004" y="710"/>
+        </scene>
         <!--Profile-->
         <scene sceneID="GxL-XR-oXK">
             <objects>
@@ -144,10 +152,25 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cJA-bM-r06">
+                                <rect key="frame" x="107" y="743" width="200" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="Wa5-gT-hZm"/>
+                                    <constraint firstAttribute="height" constant="50" id="got-91-hdG"/>
+                                </constraints>
+                                <color key="tintColor" systemColor="systemRedColor"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Logout"/>
+                                <connections>
+                                    <action selector="LogOut:" destination="YQo-cm-Zdy" eventType="touchUpInside" id="pYv-4b-fdo"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="jGO-Ik-ttw"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="cJA-bM-r06" firstAttribute="centerX" secondItem="jGO-Ik-ttw" secondAttribute="centerX" id="0KW-oc-tJq"/>
+                            <constraint firstItem="jGO-Ik-ttw" firstAttribute="bottom" secondItem="cJA-bM-r06" secondAttribute="bottom" constant="20" id="0qy-Lx-jnY"/>
                             <constraint firstItem="znN-BF-UvQ" firstAttribute="leading" secondItem="jGO-Ik-ttw" secondAttribute="leading" constant="64" id="Ihs-Hi-3Zv"/>
                             <constraint firstItem="jGO-Ik-ttw" firstAttribute="trailing" secondItem="znN-BF-UvQ" secondAttribute="trailing" constant="62.5" id="XwM-VF-k2e"/>
                             <constraint firstItem="znN-BF-UvQ" firstAttribute="top" secondItem="jGO-Ik-ttw" secondAttribute="top" constant="82" id="b4C-n2-eCh"/>
@@ -158,6 +181,7 @@
                     <navigationItem key="navigationItem" id="MAx-88-tRY"/>
                     <connections>
                         <outlet property="profileCompanyImage" destination="CW4-4N-g8u" id="Afe-MF-B1r"/>
+                        <segue destination="tbQ-Zs-kCL" kind="presentation" identifier="logOutCompanySegue" modalPresentationStyle="fullScreen" id="diy-YW-Orc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eO0-fe-Vs2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -251,6 +275,7 @@
                     <navigationItem key="navigationItem" id="b8f-Mb-trn"/>
                     <connections>
                         <outlet property="tableArticle" destination="XtV-qN-a3f" id="RIh-AB-nYN"/>
+                        <segue destination="g2Z-kg-7Xx" kind="presentation" identifier="articleListToAddArticleSegue" modalPresentationStyle="fullScreen" id="zFZ-NT-YZ2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2er-Ou-Cxe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -753,6 +778,9 @@
             <point key="canvasLocation" x="5736" y="1384"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="M3B-1p-hna"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="arrow.left" catalog="system" width="128" height="98"/>
         <image name="arrow.right.circle" catalog="system" width="128" height="121"/>
@@ -764,6 +792,9 @@
         <image name="star.circle" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
